@@ -5,6 +5,10 @@ Changelog
 2.0a4
 -----
 
+* Issue #1176 alle translatinos mit from zope.i18n import translate
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1176
+  [eschmutz]
+
 * added test-buildout for plone 4.1
   [eschmutz]
 
